--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "cviebrock/eloquent-sluggable": "^7.0",
+        "darkaonline/l5-swagger": "^8.3",
+        "doctrine/dbal": "^2.13",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5"
     },
